// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser return statements parses expression returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Call {
              "args": Array [],
              "callee": Variable {
                "name": Object {
                  "isReserved": false,
                  "kind": "Identifier",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": -9,
                      "line": -9,
                    },
                    "start": Object {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "RebootSystem",
                },
              },
              "closingParen": Object {
                "isReserved": false,
                "kind": "RightParen",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": ")",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses literal returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": Literal {
              "_location": undefined,
              "value": BrsString {
                "kind": 3,
                "value": "test",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses void returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Return {
            "tokens": Object {
              "return": Object {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "value": undefined,
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;
